    program's (macro) namespace anymore.
  - The core units have been converted to modules under the "chicken"
    namespace.
  - Added support for list-style library names.

- Syntax expander
  - Removed support for (define-syntax (foo e r c) ...), which was
    undocumented and not officially supported anyway.

4.11.1

- Compiler:
  - define-constant now correctly keeps symbol values quoted.

- Runtime system:
  - C_locative_ref has been deprecated in favor of C_a_i_locative_ref,
    which is faster because it is inlined (#1260, thanks to Kooda).
  - The default error handler now truncates very long condition
    messages (thanks to Lemonboy).

- Syntax expander
  - DSSSL lambda lists have improved hygiene, so they don't need
    the chicken or scheme modules to be imported in full (#806).
  - The let-optionals* macro no longer needs "quote", "car" and "cdr"
    to be imported and bound to their default values (#806).

4.11.0

- Security fixes
  - Specialisation rules for string-{ref,set!}, bit-set?
    and move-memory no longer use unchecked C functions which could
    result in undefined behaviour, including buffer overruns (#1216).

- Platform support
  - CHICKEN now supports the Linux X32 ABI (thanks to Sven Hartrumpf).

- Runtime system:
  - The calling convention of CPS procedures has been changed to
    use "argument vectors" instead of C calling convention.
  - The C API of C_values(), C_do_apply() and how to invoke CPS
    functions has changed.  The C_procN() macros have disappeared.
    The manual example in "Accessing external objects" for C_values
    has been updated.  See also the "numbers" egg for examples on
    how to support pre- and post-4.10.1 CHICKENs simultaneously.
  - Apply hack is no longer used; the limitation of 128 arguments
    has been lifted for platforms which had no apply hack.
  - Increased the "binary compatibility version" to 8.
  - Delivery of signals in other OS-level threads is now dealt with